# neo4jQueries

./: .gitignore  pyproject.toml
cypher/: StDev.cypher  basicMetricQueries.cypher
data/StatMetrics/: avgInDegree.json  avgOutDegree.json  medianAllDegrees.json  medianOutDegree.json  modeAllDegrees.json  modeOutDegree.json  stDevAllDegrees.json  stDevOutDegree.json
src/: StDev.cypher  basicMetricQueries.cypher  queries.txt  sql.py
src/RunPlots/: degreeCentrality.py  expDistrAllDegree.py  expDistrInDegree.py  expDistrOutDegree.py  inDegreeDistribution.py  normDistrAllDegree.py  normDistrInDegree.py  normDistrOutDegree.py  outDegreeDistribution.py  top10InDegreeNodes.py  top10OutDegreeNodes.py  top10UndirectedNodes.py  undirectedDegreeDistribution.py
src/StatMetrics/: avgAllDegrees.json  avgInDegree.json  avgOutDegree.json  medianAllDegrees.json  medianOutDegree.json  modeAllDegrees.json  modeInDegree.json  modeOutDegree.json  stDevAllDegrees.json  stDevInDegree.json  stDevOutDegree.json
